--- a/docs/README
+++ b/docs/README
@@ -1,178 +1,109 @@
-1. What is PowerAdmin
-------------------------------
+What is Poweradmin?
+-----------------------------------------------------------------------
 
-PowerAdmin is a non commercial front-end for the PowerDNS (www.powerdns.com) nameserver.
-The goal of PowerAdmin is to manage the (MySQL) database behind PowerDNS, which contains
-the DNS records.
+Poweradmin is a non-commercial front-end for the PowerDNS nameserver,
+see <http://www.powerdns.com>. The goal of Poweradmin is to provide a
+friendly management interface to the database backend of PowerDNS
+which actually holds the DNS records. At this moment, both the mysql
+and pgsql are supported. The interface allows add, modify and deletion
+of both forward and reverse zones and has full IPv6 support.
 
-There have been some changes in this release, both of major and minor importance.
-Please read the following document to familiarize yourself with them. You are also
-requested to report any bugs should you encounter them.
+Poweradmin is written by Roeland Nieuwenhuis <trancer@trancer.nl>
+and Sjeemz <sjeemz@sjeemz.nl>. It contains patches of Wim Moistry and
+Dennis Roos.
 
-
-
-2. Where to get PowerAdmin
-------------------------------
-
-The main location of PowerAdmin is http://www.poweradmin.org
-
-
-
-3. Notes
-------------------------------
+Please see CHANGES for a list of changes, CHANGES.pre-1.3.0 for a list
+of changes prior to 1.3.0 release, README.i18n for information on the
+multi language support, README.sequence for information the "sequence
+updater" and the insertion of records and zones using other interfaces
+than poweradmin.
 
 
-3.1 Migrating
-------------------------------
+Where to get Poweradmin?
+-----------------------------------------------------------------------
 
-If you are running a stone-age version of PowerAdmin read the following information!
-
-Due to some major changes in this release the current version of PowerAdmin
-supports gmysql backend. You are strongly advised to backup your data before running the
-migrator.php tool in your poweradmin directory. This is to protect you against any data
-loss should anything go wrong. We assume it all works properly, but due to a limited
-number of betatesters we cannot guarantee our tool is 100% bug free.
-
-!! Please be sure you have a working backup of your data !! 
-
-Do the following to migrate: 
-- rename the file migrator.php-pa in your webdir to migrator.php.
-- Go here to migrate it.
-It is recommended to synchronize your database aswell after the update
+The Poweradmin website can be found at <http://www.poweradmin.org>.
 
 
-3.2 DB Information
-------------------------------
+Requirements
+-----------------------------------------------------------------------
 
-For now on PowerAdmin supports PowerDNS' MySQL back-end only. If there is demand for other
-database layers support will be added in the near future. Of course, since the code is opensource,
-everyone who cannot wait is encouraged to plug in their own database layer (and if you dare, send the 
-code to us so we can evaluate it and maybe integrate it with the current PowerAdmin).
-We are still busy with PostGreSQL, but the experience needs a bit more tweaking for us.
-Time will release it, we cannot yet.
+- PowerDNS, versions 2.1 through 2.9.19 have been tested, others might
+  work as well. See <http://www.powerdns.com>.
 
-By using PEAR::DB we are bound to have some way to keep track of indexes. This is done by using seperate
-tables called users_seq and zones_seq. Also records_seq will be there. This means that if you manually
-insert a record, chances are 90% that you will have corrupted workings of PowerAdmin (because the ID is
-not in order.) The problem can be solved by running the Synchronize Database tool (select it or use the
-seq_update.php url). This will let you resynch your indexes. It is also useful if you are migrating
-from 1.0 to 1.1 or higher.
+- MySQL or PostgreSQL. Both MySQL versions 4 and 5 have been reported
+  to work, 5.0.22 has been tested.
+  
+- A webserver that support PHP 4 or 5. Apache 2.0.55 has been tested.
 
-Read more about this in README-Sequence
+- PHP. At least version 4.2.1. Version 5.1.2 has been tested. It needs
+  the mysql or pgsql extension, as well has PEAR. 
+
+- PEAR::MDB2 (2.4.0 has been tested) and PEAR::MDB2_Driver_mysql
+  (1.4.0 has been tested) or PEAR::MDB2_Driver_pgsql. Tested 
 
 
-4. Documentation
-------------------------------
+Installing
+-----------------------------------------------------------------------
 
-PowerAdmin has the following core features:
+Upgrading? See section "Upgrading". 
 
-- User Level dependant editing of domains. For example an administrator
-  can edit all domains, while a user can for example only edit the domain(s)
-  owned by him/her.
+- Install PowerDNS with a mysql or pgsql backend.
 
-- Simple administration of users that can access PowerAdmin.
+- Install MDB2 and MDB2_Driver_mysql (or pgsql equivalent) packages of
+  PEAR. You can install PEAR on a Debian-based server by installing
+  the package php-pear. Make sure php-cli can access the mysql module
+  (uncomment the line "extension=mysql.so" in /etc/php5/cli/php.ini).
+  The addional PEAR packages can be installed using the "pear install"
+  command (e.g. "pear install MDB2 ; pear install MDB2_Driver_mysql").
 
-- Easy creating of domains. Next of that, the proper assignment of rights
-  is simply and done within a few clicks.
+- Add a SQL user for poweradmin that is granted SELECT, INSERT,
+  DELETE, UPDATE and CREATE actions.
 
-- Ability to apply a record-template when creating domains. For now, the template
-  can only be configured in the config file, but this will be moved to a nice
-  database-table soon.
+- Untar and gunzip the poweradmin package in your web dir. This will
+  create a directory "poweradmin-VERSION", we will refer to this
+  directory as "poweradmin/".
 
-- Editting records in existing zones.
+- In the 'poweradmin/inc" directory the file "config-me.inc.php".
+  Edit this file to suit your environment. Then rename this file to
+  config.inc.php to be able to load the site. The website will not
+  work properly without a config, so pay attention to your config!
 
+- Next, go to <http://yourserver/poweradmin/install.php>
 
-5. Installation
-------------------------------
+- Fill in the required information to make an administrator login for
+  your PowerAdmin. If all goes well, the user is added, and you can
+  log in using that username. Do not forget to remove install.php from
+  the webdir!
 
-!! If you are updating, you should necessarily read paragraph 3 !!
-
-What you need:
-- PowerDNS (Duh!) (Versions 2.1 through 2.6 have been tested, others might work aswell)
-  http://www.powerdns.com/
-- MySQL
-  http://www.mysql.com/
-- An (Apache) webserver that supports php4 and php4-mysql. The PHP version must be at least 4.2.1.
-  http://www.apache.org/
-  http://www.php.net/
-
-First of all, install PowerDNS with it's MySQL Generic back-end.
-
-Next to the MySQL user you created for PowerDNS, you need a MySQL user for PowerAdmin that can do
-the following actions on the PowerDNS database you created: SELECT, INSERT, DELETE, UPDATE, CREATE.
-
-Untar/gzip poweradmin-VERSION.tar.gz in your webdir. This will create a directory called
-poweradmin-VERSION.
-
-In the 'inc' subdirectory of your newly created directory, you'll find a file called
-config-block.inc.php. Edit this file to suit your environment. Then rename it to
-config.inc.php to be able to load the site. The website will not work properly without a config,
-so pay attention to your configuration!
-
-Next, go to http://www.yourdomain.com/poweradmin-VERSION/install.php
-
-Fill in the required information to make an administrator login for your
-PowerAdmin. If all goes well, the user is made, and you can log in using that username.
-WARNING! Be sure to remove install.php from the webdir!
-
-After you are done, run http://www.yourdomain.com/poweradmin-VERSION/test_setup.php to see if
-everything is set up well.
-This test also includes the functionality testing of your PowerDNS records (whether you
-have read/write access or not)
+- Finaly, run <http://yourserver/poweradmin/test_setup.php> to see if
+  everything is setup correctly. This test also includes the
+  functionality testing of your PowerDNS records (whether you
+  have read/write access or not).
 
 
-6. User levels explained
-------------------------------
-User levels explained:
+Upgrading from 1.2.7-patched
+-----------------------------------------------------------------------
 
-[x] = yes
-[ ] = no
-
-User        Permission to           Permission to           Permission to           Permission to
-Level       change own              change other            create domains          add/modify
-            domain(s)               domain(s)                                       users
-
- 1               [x]                     [ ]                     [ ]                     [ ]
- 5               [x]                     [x]                     [x]                     [ ]
- 10              [x]                     [x]                     [x]                     [x]
+If you are upgrading from 1.2.7-patched, there is not much you need to
+do. The only thing that is needed is install PEAR packages MDB2 and
+MDB2_Driver_mysql (or MDB2_Driver_pgsql). This can be done by running
+the commands "pear install MDB2 ; pear install MDB2_Driver_mysql".
+Make sure php-cli can access the mysql extension by uncommenting the
+line "extension=mysql.so" in /etc/php5/cli/php.ini
 
 
-7. Further Info && Bugs
-------------------------------
+User levels explained
+-----------------------------------------------------------------------
 
-The latest contact information can always be found at http://www.poweradmin.org .
+[x] = yes   [ ] = no
 
+User    Permission to   Permission to  Permission to    Permission to
+Level   change own      change other   create domains   add/modify
+        domain(s)       domain(s)                       users
 
-8. Links and more information
-------------------------------
-
-http://www.poweradmin.org   Our main site
-http://www.powerdns.com		PowerDNS
-http://www.ietf.org		Information about DNS
-http://poweradmin.sf.net	PowerAdmin @ SourceForge
-http://www.apache.org/          The Apache Webserver
-http://www.php.net/             PHP programming language
-http://www.mysql.com/           MySQL database server
-
-9. Changes
-------------------------------
-
-Changes for this version are:
-- Many many many bug fixes!
-- Enhanced sequence updater that is now smarter.
-- SOA Fields fixed.
-- Automatically SOA serial updating after each change in the DNS.
-- MASTER/SLAVE Functionality but that stays untested at the moment of writing. 
-  Use the toggles with care, see the config-block.inc.php for more information.
-- Search abilities added thanks to DeViCeD
-- A lot of other stuff and minor details not worth mentioning that much.
+ 1           [x]             [ ]            [ ]              [ ]
+ 5           [x]             [x]            [x]              [ ]
+ 10          [x]             [x]            [x]              [x]
 
 
---------------------------------------------------------------------------
-Enjoy!
-
-There are some major changes, we would like feedback!
-See paragraph 7 for contact information.
-
-Regards,
-The PowerAdmin Team
