- Update of documentation. Minor changes only. - Update of i18n templatge. - Update of Dutch translation. - Correction of name of configuration file. - Changed default language to English.

--- a/docs/README
+++ b/docs/README
@@ -40,7 +40,7 @@ Requirements
   the mysql or pgsql extension, as well has PEAR. 
 
 - PEAR::MDB2 (2.4.0 has been tested) and PEAR::MDB2_Driver_mysql
-  (1.4.0 has been tested) or PEAR::MDB2_Driver_pgsql. Tested 
+  (1.4.0 has been tested) or PEAR::MDB2_Driver_pgsql.
 
 
 Installing
