Fixed small layout bug in list_zones.php.

--- a/docs/TODO
+++ b/docs/TODO
@@ -1,26 +1,1 @@
-The TODO isnt much atm, to be fixed in the feature using a bug tracker.
-The documentation has to be converted to docbook or a similar format.
-
-Legenda:
-	+ = useful option, or not too hard to implement, should be implemented in time.
-	- = might be useful but time consuming and maybe a bit overkill. Nice if we have time left :)
-	* = being worked on
-
-        +- <Trance> Add some more webbased support for those who dont know DNS.
-        -- <Trance> disable priority when adding IN A (JavaScript)
-        +- <Sjeemz> put the template(s) in database.
-	-- <Trance> Multilanguage support is an option?
-	+- <Trance> logging functionality
-        +- <Sjeemz> accept email/url when adding new domains.
-	+- <Sjeemz> add support for more pdns backends
-	*- <Trance> Move error codes to defined file.
-	-- <DeViCeD> a little checkbox that would state: create corresponding PTR record
-	-- <Trance> change the listing order (Ian's remark)
-Priority:
-	+- <Trance> slave master functionality, also includes issue below
-	+- <Trance> mijo requested a function so that SOA records serials would be auto incremented. This in combination with bind
-	backends that require so
-	+- <Trance> fix multidatabase install.php
-	+- <Trance> Document security issues on mysql level.
-
-
+Please see <https://rejo.zenger.nl/poweradmin/>.
