--- a/locale/en_EN/LC_MESSAGES/en.po
+++ b/locale/en_EN/LC_MESSAGES/en.po
@@ -1,19 +1,19 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# poweradmin english translation
+# Copyright (C) 2007-2008 Rejo Zenger
+# This file is distributed under the same license as the poweradmin package.
+# Rejo Zenger <rejo@zenger.nl>, 2007
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: poweradmin\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-05-01 21:25+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2007-05-28 09:33+0200\n"
+"PO-Revision-Date: 2007-05-28 09:33+0200\n"
+"Last-Translator: Rejo Zenger <rejo@zenger.nl>\n"
+"Language-Team: poweradmin english\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: add_record.php:31
