--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,58 +1,5 @@
-CHANGES between current revision and revision 62
------------------------------------------------------------------------
-
-For the time being, please check:
-
-  https://rejo.zenger.nl/poweradmin/svn-log.txt
+CHANGELOG
 
 
-CHANGES between revision 61 and orginal 1.2.7-patched
------------------------------------------------------------------------
-
-- Removed a few bugs in the 1.3.0 release.
-
-- Moved language setting to config file.
-
-- Added support for all PowerDNS zone types: slave, master and native.
-
-- Added support for supermasters.
-
-- Added basic support for skins. All html markup tags are now removed
-  from the code. One example CSS file has been added. The CSS and HTML
-  has been made as flexible as possible, so one is free to position a
-  menu in a left bar instead of inline with other elements, etc.
-
-- Changed all visible occurrences of "domain" to "zone".
-
-- Updated i18n related files, Dutch translation fully updated.
-
-- Added a page with credits to the original authors.
-
-- Removed all PHP shorttags.
-
-- Updated the "database abstraction layer" from an outdated version of
-  the unmaintained PEAR::DB module to the most recent version of
-  PEAR::MDB2 (which is currently 2.4.0). Please read the README file
-  for important information about upgrading from 1.2.7-patched. It
-  will not break anything if you don't, but it won't work either. :)
-
-- Added multi-language support, using php's gettext functionality. A 
-  first Dutch translation has been added, along with English. See for
-  more details docs/README.i18n.
-
-- Removed the so-called "sequence updater". The code has been changed
-  to use the auto increment functionalitiy in both mysql and pgsql. It 
-  is only tested on these backends, other backends are untested and
-  may be unsupported. See docs/README.sequence for more details on
-  inserting records and zones into the powerdns database when using
-  other tools than poweradmin as well.
-
-- Fixed a bug in search.php. When searching for a string it would
-  return matching records, not the matching domains.
-
-- Started cleanup code and files. For example, remove code and files
-  related to "migration from a stone-age version of poweradmin",
-  removal of the file called "BAKrecords.php", removal of code
-  comments of already implemented todo's, etc.
-
+Please see <https://code.krikkit.nl/trac/poweradmin/log/>.
 
