Added MySQL database structure. Changed CHANGELOG location URL to trunk-only commits.

--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -1,5 +1,4 @@
 CHANGELOG
 
-
-Please see <https://code.krikkit.nl/trac/poweradmin/log/>.
+Please see <https://code.krikkit.nl/trac/poweradmin/log/trunk>.
 
