--- a/docs/i18n-template-php.pot
+++ b/docs/i18n-template-php.pot
@@ -44,7 +44,7 @@ msgid "Commit changes"
 msgstr ""
 
 #: add_record.php:71
-msgid "The record was succesfully added."
+msgid "The record was successfully added."
 msgstr ""
 
 #: add_record.php:77
@@ -583,43 +583,43 @@ msgid "The first part of your SOA record does not contain a valid hostname for a
 msgstr ""
 
 #: inc/error.inc.php:79
-msgid "Zone has been added succesfully."
+msgid "Zone has been added successfully."
 msgstr ""
 
 #: inc/error.inc.php:80
-msgid "Zone has been deleted succesfully."
+msgid "Zone has been deleted successfully."
 msgstr ""
 
 #: inc/error.inc.php:81
-msgid "The user has been updated succesfully."
+msgid "The user has been updated successfully."
 msgstr ""
 
 #: inc/error.inc.php:82
-msgid "The user has been created succesfully."
+msgid "The user has been created successfully."
 msgstr ""
 
 #: inc/error.inc.php:83
-msgid "The user has been deleted succesfully."
+msgid "The user has been deleted successfully."
 msgstr ""
 
 #: inc/error.inc.php:84
-msgid "The record has been updated succesfully."
+msgid "The record has been updated successfully."
 msgstr ""
 
 #: inc/error.inc.php:85
-msgid "The record has been deleted succesfully."
+msgid "The record has been deleted successfully."
 msgstr ""
 
 #: inc/error.inc.php:86
-msgid "The supermaster has been deleted succesfully."
+msgid "The supermaster has been deleted successfully."
 msgstr ""
 
 #: inc/error.inc.php:87
-msgid "The supermaster has been added succesfully."
+msgid "The supermaster has been added successfully."
 msgstr ""
 
 #: inc/error.inc.php:88
-msgid "The permission template has been deleted succesfully."
+msgid "The permission template has been deleted successfully."
 msgstr ""
 
 #: inc/record.inc.php:270
